--- a/index.html
+++ b/index.html
@@ -275,20 +275,21 @@
           </div>
         </section>
         <section class="cover">
-          <div class="cover__overlay"></div>
+          <div class="cover__overlay">
+            <h2 class="title title_place_cover">
+              <a
+                class="cover__link"
+                href="https://stampsy.com/na-elektrichkakh-do-baikala"
+                target="_blank"
+                >До Байкала "на собаках"</a
+              >
+            </h2>
+            <p class="subtitle subtitle_place_cover">
+              По мотивам учебной темы о Транссибе - путешествие от столицы до
+              Байкала на электричках.
+            </p>
+          </div>
           <div class="cover__background"></div>
-          <h2 class="title title_place_cover">
-            <a
-              class="cover__link"
-              href="https://stampsy.com/na-elektrichkakh-do-baikala"
-              target="_blank"
-              >До Байкала "на собаках"</a
-            >
-          </h2>
-          <p class="subtitle subtitle_place_cover">
-            По мотивам учебной темы о Транссибе - путешествие от столицы до
-            Байкала на электричках.
-          </p>
         </section>
       </main>
       <footer class="footer">
