--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           alt="Векторная карта России"
         />
         <div class="header__lang-links">
-          <div class="header__lang-link">
+          <div class="header__lang-link header__lang-link_status_active">
             <a>Ru</a>
           </div>
           <div class="header__lang-link">
