--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         alt="Векторная карта России"
       />
       <ul class="header__lang-links">
-        <li class="header__button_active">
-          <a class="header__lang-link" href="#">Ru</a>
+        <li>
+          <a class="header__lang-link_active" href="#">Ru</a>
         </li>
-        <li class="header__button_disabled">
+        <li>
           <a class="header__lang-link" href="#">En</a>
         </li>
       </ul>
@@ -233,7 +233,7 @@
           </div>
         </div>
         <div class="places__place">
-          <h2 class="title_place_places">Зимний Байкал</h2>
+          <h2 class="title title_place_places">Зимний Байкал</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
             <a class="link" href="https://vk.com/baikalmile" target="_blank"
@@ -289,12 +289,12 @@
         </div>
       </section>
       <section class="cover">
-        <a
-          class="cover__link cover__overlay"
-          href="https://stampsy.com/na-elektrichkakh-do-baikala"
-          target="_blank"
-        >
-          <div class="cover__text">
+        <div class="cover__overlay">
+          <a
+            class="cover__link"
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+            target="_blank"
+          >
             <h2 class="title title_place_cover">
               До Байкала «на&nbsp;собаках»
             </h2>
@@ -302,8 +302,8 @@
               По мотивам учебной темы о Транссибе - путешествие от столицы до
               Байкала на электричках.
             </p>
-          </div>
-        </a>
+          </a>
+        </div>
       </section>
     </main>
     <footer class="footer">
