--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       />
       <ul class="header__lang-links">
         <li>
-          <a class="header__lang-link_active" href="#">Ru</a>
+          <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
         </li>
         <li>
           <a class="header__lang-link" href="#">En</a>
