fix: cover text dash wrap

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               До Байкала «на&nbsp;собаках»
             </h2>
             <p class="subtitle subtitle_place_cover">
-              По мотивам учебной темы о Транссибе - путешествие от столицы до
+              <span class="subtitle__span">По мотивам учебной темы о Транссибе –</span> путешествие от столицы до
               Байкала на электричках.
             </p>
           </a>
