add fontsize variables

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Путешествие по России</title>
+    <title>Путешествия по России</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
@@ -24,7 +24,7 @@
     </header>
     <main>
       <section class="lead">
-        <h1 class="title">Путешествия по&nbsp;России</h1>
+        <h1 class="title">Путешествия</br> по&nbsp;России</h1>
         <p class="subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
