--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
       <section class="lead">
-        <h1 class="title">Путешествия</br> по&nbsp;России</h1>
+        <h1 class="title">Путешествия<br> по&nbsp;России</h1>
         <p class="subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
