feat: language toggle

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       />
       <ul class="header__lang-links">
         <li>
-          <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
+          <a class="header__lang-link header__lang-link_active" href="#" id="ru">Ru</a>
         </li>
         <li>
-          <a class="header__lang-link" href="#">En</a>
+          <a class="header__lang-link" href="#" id="en">En</a>
         </li>
       </ul>
     </header>
@@ -353,5 +353,6 @@
       </nav>
       <p class="footer__copyright">&copy; 2020. Дарья Макавчик</p>
     </footer>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
