--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
         <figure class="lead__figure">
+          <div class="lead__figure-block">
+          <img class="lead__svg" src="./images/travelline.svg">            
           <img
             class="lead__image"
             src="./images/kalegin-michail-179870-unsplash.jpg"
             alt="Спящая девушка в вагоне поезда"
           />
+          </div>
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
       </section>
@@ -356,3 +359,6 @@
     <script src="./scripts/script.js"></script>
   </body>
 </html>
+
+
+  
