--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </p>
         <figure class="lead__figure">
           <div class="lead__figure-block">
-          <img class="lead__svg" src="./images/travelline.svg">            
+          <img class="lead__svg" src="./images/__travel-line.svg">            
           <img
             class="lead__image"
-            src="./images/kalegin-michail-179870-unsplash.jpg"
+            src="./images/__background-lead.jpg"
             alt="Спящая девушка в вагоне поезда"
           />
           </div>
