--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Путешествия по России</title>
+    <title>Russian Travel</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
@@ -24,9 +24,9 @@
     </header>
     <main>
       <section class="lead">
-        <h1 class="title">Путешествия<br> по&nbsp;России</h1>
+        <h1 class="title">Russian Travel</h1>
         <p class="subtitle">
-          Настоящая страна не в выпусках новостей, а здесь.
+          Traveling – it leaves you speechless, then turns you into a storyteller.
         </p>
         <figure class="lead__figure">
           <div class="lead__figure-block">
@@ -34,114 +34,109 @@
           <img
             class="lead__image"
             src="./images/__background-lead.jpg"
-            alt="Спящая девушка в вагоне поезда"
+            alt="A girl sleeping in a train compartment"
           />
           </div>
-          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+          <figcaption class="lead__caption">Your journey starts here.</figcaption>
         </figure>
       </section>
       <section class="intro">
-        <h2 class="title title_place_intro">Чего мы там не видели?</h2>
+        <h2 class="title title_place_intro">Why everyone must  visit Russia</h2>
         <p class="intro__text">
-          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
-          36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома,
-          не видели? На самом деле, Россия — это целая вселенная с ласковым
-          морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
-          увидеть все эти красоты можно без миллионов на счету, загранпаспорта и
-          многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
-          мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и
-          проехала 20 тысяч километров по родной стране. Мы выбрали и описали
-          некоторые интересные места, достойные вашего отпуска.
+          According to statistics, 95% of Russians dream of going somewhere, 
+          but only 36% plan to spend their holidays in their home country. Like, what have we not seen here at home? 
+          Actually, there is the gentle sea of ​​the south, the dense forests of the Sayans and the harsh ice of the Putorana Plateau. 
+          We have selected some good places which are enjoyable to visit it.
         </p>
         <ul class="intro__list">
           <li class="intro__list-item">
-            <span class="intro__list-text">Часовых поясов</span> 11
+            <span class="intro__list-text">Properties inscribed on the World Heritage List</span> 30
           </li>
           <li class="intro__list-item">
             <span class="intro__list-text"
-              >Объектов природного наследия ЮНЕСКО</span
+              >National Parks</span
             >
-            12
+            105
           </li>
           <li class="intro__list-item">
             <span class="intro__list-text"
-              >Объектов культурного наследия ЮНЕСКО</span
+              >Time zones</span
             >
-            16
+            11
           </li>
           <li class="intro__list-item">
-            <span class="intro__list-text">Природных заповедников</span> 105
-          </li>
+            <span class="intro__list-text">Airports</span> 241
+          <!-- </li>
           <li class="intro__list-item">
             <span class="intro__list-text">Аэропортов</span> 241
-          </li>
+          </li> -->
         </ul>
       </section>
       <section class="photo-grid">
         <img
           class="photo-grid__item"
           src="./images/__item.jpg"
-          alt="Вид из окна поезда"
+          alt="View from a train window"
         />
         <img
           class="photo-grid__item"
           src="./images/__item2.jpg"
-          alt="Заснеженные горы"
+          alt="Snowy Mountains"
         />
         <img
           class="photo-grid__item"
           src="./images/__item3.jpg"
-          alt="Собака, стоящая на стоге сена"
+          alt="A dog standing on a haystack"
         />
         <img
           class="photo-grid__item"
           src="./images/__item4.jpg"
-          alt="Густой лес в тумане"
+          alt="A foggy forest"
         />
         <img
           class="photo-grid__item"
           src="./images/__item5.jpg"
-          alt="Автомобиль на льду"
+          alt="A car on the icy road"
         />
         <img
           class="photo-grid__item"
           src="./images/__item6.jpg"
-          alt="Морской берег"
+          alt="Sea shore"
         />
         <img
           class="photo-grid__item"
           src="./images/__item7.jpg"
-          alt="Горные вершины"
+          alt="Mountain tops"
         />
         <img
           class="photo-grid__item"
           src="./images/__item8.jpg"
-          alt="Знак пешеходного перехода"
+          alt="Pedestrian crossing sign"
         />
         <img
           class="photo-grid__item"
           src="./images/__item9.jpg"
-          alt="Туманный ландшафт"
+          alt="Foggy landscape"
         />
         <img
           class="photo-grid__item"
           src="./images/__item10.jpg"
-          alt="Зеленый луг и горы"
+          alt="A green field surrounded by mountains"
         />
         <img
           class="photo-grid__item"
           src="./images/__item11.jpg"
-          alt="Крутой горный утёс"
+          alt="A steep mountain cliff"
         />
         <img
           class="photo-grid__item"
           src="./images/__item12.jpg"
-          alt="Густой белый туман в горах"
+          alt="Thick white fog in the mountains"
         />
       </section>
       <section class="places">
         <div class="places__place">
-          <h2 class="title title_place_places">Куршская коса</h2>
+          <h2 class="title title_place_places">Curonian Spit</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
             <a class="link" href="http://park-kosa.ru" target="_blank"
@@ -151,27 +146,24 @@
           <img
             class="places__image"
             src="./images/__image.jpg"
-            alt="Куршский залив"
+            alt="Curonian landscape"
           />
           <div class="places__paragraphs">
             <p class="places__paragraph">
-              Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
-              горизонта — спокойного Куршского залива с одной стороны и
-              подёрнутого рябью волн Балтийского моря с другой. Уникальная
-              природная зона на краю российского анклава.
+              Here, in the middle of forests and sand dunes, you can see a curved sand-dune spit that separates 
+              the Curonian Lagoon from the Baltic Sea coast. Its southern portion lies within Kaliningrad Oblast, Russia, 
+              and its northern within southwestern Klaipėda County, Lithuania. 
+              It is a UNESCO World Heritage Site shared by Lithuania and Russia. A truly unique natural area.
             </p>
             <p class="places__paragraph">
-              На этом Калининградская область не заканчивается. Для
-              путешественника и исследователя там же по соседству — самая
-              западная точка России, Балтийская коса, — и немецкое наследие
-              россыпи небольших приморских городов. Атмосфера здешних мест
-              исключает суету, окуная в спокойствие природы и запах стального,
-              прохладного моря.
+              For the traveler and explorer, the Kaliningrad region has the westernmost point of Russia, 
+              the Baltic Spit, and the German heritage of small seaside towns. 
+              The atmosphere dips into the tranquility of nature and the smell of steel, the cold sea.
             </p>
           </div>
         </div>
         <div class="places__place">
-          <h2 class="title title_place_places">Кольский</h2>
+          <h2 class="title title_place_places">Kola Peninsula</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
             <a
@@ -184,27 +176,21 @@
           <img
             class="places__image"
             src="./images/__image2.jpg"
-            alt="Заснеженная тундра"
+            alt="Snowy tundra"
           />
           <div class="places__paragraphs">
             <p class="places__paragraph">
-              Почти весь полуостров находится за Полярным кругом. Саамская
-              тундра, от которой на юг — тайга, а на север — Ледовитый океан,
-              прикидывающийся Баренцевым морем.
+              Almost the entire peninsula is located beyond the Arctic Circle and is bordered by the Barents Sea 
+              to the north and by the White Sea to the east and southeast.
             </p>
             <p class="places__paragraph">
-              Возможно, вы смотрели Звягинцева и даже слышали историю
-              арктического фестиваля в Териберке. Возможно, слово «Хибины» не
-              осталось под снегом школьных воспоминаний об уроках географии.
-              Возможно, вы не интересовались пронизывающей земную кору
-              сверхглубокой скважиной, а от апатитов вас давно накрывает апатия.
-              Но ваша мечта увидеть северное сияние начинает сбываться с билетом
-              в Мурманск.
+              There is the Arctic festival in Teriberka and the Khibiny Mountains, the ultra-deep well penetrating the earth's crust and apatites. 
+              But your dream of seeing the northern lights comes true by buying a ticket to Murmansk.
             </p>
           </div>
         </div>
         <div class="places__place">
-          <h2 class="title title_place_places">Алтай</h2>
+          <h2 class="title title_place_places">Altai</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
             <a
@@ -217,21 +203,19 @@
           <img
             class="places__image"
             src="./images/__image3.jpg"
-            alt="Ноутбук на фоне зелени"
+            alt="A laptop on a green background"
           />
           <div class="places__paragraphs">
             <p class="places__paragraph">
-              Алтай — одно из красивейших мест в России. В первую очередь из-за
-              гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
-              соснами, горные реки и озёра. А если вы откроете в автомобиле
-              окна, сможете познакомиться с невидимым чудом здешних мест —
-              горным воздухом.
+              Altai is one of the most beautiful places in Russia. First of all, because of the mountains: if you drive along the ridge, 
+              you will see slopes strewn with pine trees, mountain rivers and lakes. 
+              And if you open the car windows, you can breathe mountain air - the invisible miracle of these places.
             </p>
             <p class="places__paragraph">
-              Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
-              Так вы увидите всё разнообразие местной флоры и фауны. По лесам
-              Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся
-              косули. И знаменитые манулы — тоже обитатели Алтайского края.
+             The climate in Altai is temperate, so it is best to go here in summer. 
+             So you will see all the variety of local flora and fauna. 
+             Moose roam the forests of Altai, eagles fly over the ridges, and roe deer graze on the plains. 
+             And the famous manuls are also inhabitants of the Altai Territory.
             </p>
           </div>
         </div>
@@ -246,25 +230,22 @@
           <img
             class="places__image"
             src="./images/__image4.jpg"
-            alt="Трещины на льду"
+            alt="Cracks on ice"
           />
           <div class="places__paragraphs">
             <p class="places__paragraph">
-              Всем известен Байкал как крупнейшее озеро в мире. Многие также
-              знают, что это самый большой источник пресной воды и одно из
-              красивейших мест в России.
+              Everyone knows Baikal as the largest lake in the world. 
+              Many also know that this is the largest source of fresh water and one of the most beautiful places in Russia.
             </p>
             <p class="places__paragraph">
-              Конечно, это всё так. Но Байкал ещё идеальное место
-              для соревнований по скийорингу. Это такой вид спорта, когда лыжник
-              привязывает себя к мотоциклу, и тандем старается развить как можно
-              бóльшую скорость на льду. В марте 2019 года на фестивале
-              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
+              Of course, it's all true. But Baikal is still an ideal place for "Skijoring" competitions. 
+              This is a sport where a skier ties himself to a motorcycle and then they try to develop as much speed 
+              as possible on the ice. In March 2019, a world record was set at the Baikal Mile festival - 197.011 km/h.
             </p>
           </div>
         </div>
         <div class="places__place">
-          <h2 class="title title_place_places">Карелия</h2>
+          <h2 class="title title_place_places">Republic of Karelia</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
             <a class="link" href="http://vodlozero.ru" target="_blank"
@@ -274,19 +255,15 @@
           <img
             class="places__image"
             src="./images/__image5.jpg"
-            alt="Озеро в густом лесу"
+            alt="A lake in a thick forest"
           />
           <div class="places__paragraphs">
             <p class="places__paragraph">
-              Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
-              сибирская лиственница не растёт западнее Водлозера. Зато здесь она
-              вымахивает на 30 метров — леса карельских национальных парков
-              из-за непроходимых болот никогда не знали топора. Некоторым соснам
-              уже больше чем полтысячелетия. Прикоснитесь к живому существу,
-              видевшему солнце раньше, чем увидал его Иван Грозный. В
-              девственном лесу на сотню километров не встретишь тропы. А на
-              редких тропинках деревья в паре метров от земли помечены
-              медвежьими когтями. Чтобы все знали, кто тут хозяин.
+              The republic is in the northwestern part of Russia, between the White and Baltic Seas. 
+              The White Sea has a shoreline of 630 kilometers. Densely forested and remote, Karelia is a paradise on Earth 
+              for any nature lover. Some pines are more than half a millennium old. In the virgin forest for a hundred kilometers, 
+              you will not find a path. And on rare paths, trees a couple of meters from the ground are marked with bear claws. 
+              Let everyone know who's boss. Be enthralled by the region’s untouched wilderness and diverse wildlife.
             </p>
           </div>
         </div>
@@ -299,11 +276,10 @@
             target="_blank"
           >
             <h2 class="title title_place_cover">
-              До Байкала «на&nbsp;собаках»
+              Let's visit Baikakl
             </h2>
             <p class="subtitle subtitle_place_cover">
-              <span class="subtitle__span">По мотивам учебной темы о Транссибе –</span> путешествие от столицы до
-              Байкала на электричках.
+              <span class="subtitle__span">A story about a trip from Moscow</span> to Baikal by local trains
             </p>
           </a>
         </div>
@@ -317,7 +293,7 @@
               class="link footer__link"
               href="https://yandex.ru/maps"
               target="_blank"
-              >Карты</a
+              >Map</a
             >
           </li>
           <li>
@@ -325,7 +301,7 @@
               class="link footer__link"
               href="https://yandex.ru/pogoda"
               target="_blank"
-              >Погода</a
+              >Weather</a
             >
           </li>
           <li>
@@ -333,7 +309,7 @@
               class="link footer__link"
               href="https://rasp.yandex.ru"
               target="_blank"
-              >Расписание</a
+              >Transport schedule</a
             >
           </li>
           <li>
@@ -341,7 +317,7 @@
               class="link footer__link"
               href="https://calendar.yandex.ru"
               target="_blank"
-              >Календарь</a
+              >Calendar</a
             >
           </li>
           <li>
@@ -349,12 +325,12 @@
               class="link footer__link"
               href="https://travel.yandex.ru"
               target="_blank"
-              >Путешествия</a
+              >Flights</a
             >
           </li>
         </ul>
       </nav>
-      <p class="footer__copyright">&copy; 2021. Дарья Макавчик</p>
+      <p class="footer__copyright">&copy; 2021. Darya Makauchyk</p>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
