fix: alt translation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img
         class="logo"
         src="./images/__logo.svg"
-        alt="Векторная карта России"
+        alt="A vector map of Russia"
       />
       <ul class="header__lang-links">
         <li>
@@ -41,7 +41,7 @@
         </figure>
       </section>
       <section class="intro">
-        <h2 class="title title_place_intro">Why everyone must  visit Russia</h2>
+        <h2 class="title title_place_intro">Why everyone must visit Russia</h2>
         <p class="intro__text">
           According to statistics, 95% of Russians dream of going somewhere, 
           but only 36% plan to spend their holidays in their home country. Like, what have we not seen here at home? 
