--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           </div>
         </div>
         <div class="places__place">
-          <h2 class="title title_place_places">Зимний Байкал</h2>
+          <h2 class="title title_place_places">Winter Baikal</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
             <a class="link" href="https://vk.com/baikalmile" target="_blank"
