--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             target="_blank"
           >
             <h2 class="title title_place_cover">
-              Let's visit Baikakl
+              Let's visit Baikal
             </h2>
             <p class="subtitle subtitle_place_cover">
               <span class="subtitle__span">A story about a trip from Moscow</span> to Baikal by local trains
